<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    android:background="#222121">


    <ImageButton
        android:id="@+id/grid_button"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#222121"
        android:contentDescription="@string/see_statistics"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintStart_toEndOf="@id/map_button"
        app:tint="#FAF4F4" />

    <ImageButton
        android:id="@+id/map_button"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#222121"
        android:contentDescription="@string/open_mood_map"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/map_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/grid_button"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#FAF9F9" />

    <ImageButton
        android:id="@+id/heart_button"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#222121"
        android:contentDescription="@string/open_follow_requests"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilepage"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:tint="#F8F5F5" />

    <ImageButton
        android:id="@+id/profilepage"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#222121"
        android:contentDescription="@string/open_profile_page"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/heart_button"
        app:tint="#FAF9F9" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#222121"
        android:contentDescription="@string/add_mood_event"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/add_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/heart_button"
        app:layout_constraintStart_toEndOf="@id/grid_button"
        app:tint="#F8F5F5" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="410dp"
        android:layout_height="646dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682">


    </ListView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>