<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="#222121">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            tools:ignore="contentDescription"
            android:id="@+id/side_panel_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#F5E6D3"/>

        <TextView
            android:id="@+id/profile_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/jomolhari"
            android:text="@string/profile"
            android:textColor="#F5E6D3"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/profile_heading"
            app:tint="#F5E6D3"
            app:civ_border_width="3dp"
            app:civ_border_color="#000"
            app:srcCompat="@drawable/user"/>

        <LinearLayout
            android:id="@+id/profile_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/user_icon"
            app:layout_constraintTop_toBottomOf="@id/side_panel_button"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F5E6D3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/jomolhari"/>

            <!-- Horizontal stats container -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <!-- Follower Section -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/followerLayout"
                    android:orientation="vertical"
                    android:layout_marginEnd="24dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        android:textColor="#F5E6D3"
                        android:fontFamily="@font/jomolhari"/>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#F5E6D3"
                        android:fontFamily="@font/jomolhari"/>
                </LinearLayout>

                <!-- Following Section -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/followingLayout"
                    android:orientation="vertical"
                    android:layout_marginEnd="24dp">

                    <TextView
                        android:id="@+id/textView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="#F5E6D3"
                        android:fontFamily="@font/jomolhari"/>

                    <TextView
                        android:id="@+id/textView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#F5E6D3"
                        android:fontFamily="@font/jomolhari"/>
                </LinearLayout>

                <!-- Moods Section -->
                <LinearLayout
                    android:id="@+id/moodLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jomolhari"
                        android:text="@string/moods"
                        android:textColor="#F5E6D3" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jomolhari"
                        android:textColor="#F5E6D3" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/jomolhari"
                android:textColor="#F5E6D3" />
        </LinearLayout>

        <TextView
            android:id="@+id/recent_moods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jomolhari"
            android:text="@string/recents"
            android:textColor="#F5E6D3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_icon"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>

        <ListView
            android:id="@+id/recent_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/recent_moods"
            tools:layout_editor_absoluteX="-39dp"/>


        <FrameLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>